# test-case

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  analyze.py  config.py  docker-compose.yml  generate.py  main.py  models.py  prompts.py  pyproject.toml  python_coding_rules.md  requirements.txt  security.py  skills-lock.json
.github/workflows/: docker-publish.yml
context/: account_access.md  payment_issues.md  refunds.md  tariff_questions.md  technical_errors.md
docs/: CONTEXT.md  pipeline_diagrams.md  python_coding_rules.md
docs/fe-integration/: chat-analysis-api.md
domains/: liven.md  maxbeauty.md  pawchamp.md  storyby.md
src/chat_analysis/: models.py
src/chat_analysis/analysis/: models.py  prompts.py  service.py
src/chat_analysis/api/: app.py  models.py  storage.py
src/chat_analysis/api/routers/: chats.py  groups.py
src/chat_analysis/context_gathering/: models.py  prompts.py  service.py
src/chat_analysis/core/: config.py  logging.py  security.py
src/chat_analysis/data/context/: account_access.md  payment_issues.md  refunds.md  tariff_questions.md  technical_errors.md
src/chat_analysis/data/domains/: brighterly.md  dressly.md  howly.md  relatio.md  riseguide.md
src/chat_analysis/generation/: models.py  prompts.py  service.py
