[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
chat-generate = "chat_analysis.generation.service:main"
chat-analyze = "chat_analysis.analysis.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
